--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,18 +2,5 @@ jdk:
   - openjdk21
 
 before_install:
-  - |
-    cat > ~/.m2/toolchains.xml <<'EOF'
-    <?xml version="1.0" encoding="UTF-8"?>
-    <toolchains>
-      <toolchain>
-        <type>jdk</type>
-        <provides>
-          <version>21</version>
-        </provides>
-        <configuration>
-          <jdkHome>${env.JAVA_HOME}</jdkHome>
-        </configuration>
-      </toolchain>
-    </toolchains>
-    EOF
+  - sdk install maven
+  - sdk default maven
