Clean up toolchains plugin goals and change minimum Java version to testJava

--- a/pom.xml
+++ b/pom.xml
@@ -135,17 +135,11 @@
                             <goals>
                                 <goal>display-discovered-jdk-toolchains</goal>
                                 <goal>select-jdk-toolchain</goal>
-                                <goal>toolchain</goal>
                             </goals>
                         </execution>
                     </executions>
                     <configuration>
-                        <version>[17,)</version>
-                        <toolchains>
-                            <jdk>
-                                <version>[${testJava}]</version>
-                            </jdk>
-                        </toolchains>
+                        <version>[${testJava},)</version>
                     </configuration>
                 </plugin>
                 <plugin>
