--- a/core/pom.xml
+++ b/core/pom.xml
@@ -131,6 +131,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <configuration>
+                    <createDependencyReducedPom>true</createDependencyReducedPom>
                     <filters>
                         <filter>
                             <artifact>*.*</artifact>
@@ -168,6 +169,12 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
+                <configuration>
+                    <flattenMode>ossrh</flattenMode>
+                    <pomElements>
+                        <dependencies>flatten</dependencies>
+                    </pomElements>
+                </configuration>
             </plugin>
 
 <!--            <plugin>-->
